Bug 1158307 - Add Shutdown checks r=cpearce